turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: object java.awt.Color is not a value
		setCouleurBrosse(Color(i))
                                 ^